# xontrib-dalias

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
tests/: test_xontrib.py
xontrib/: spec_mod.py
xontrib/dalias/: __init__.py
xontrib/spec_mod/: __init__.py  to_dict.py
