
[project]
name = "xontrib-spec-mod"
version = "0.0.3"
license = {file = "LICENSE"}
description = "Library of xonsh subprocess specification modifiers."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = ["xonsh>=0.17.0"]
authors = [
    { name = "anki-code", email = "a@a.a" },
]
[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/anki-code/xontrib-spec-mod"
Documentation = "https://github.com/anki-code/xontrib-spec-mod/blob/master/README.md"
Code = "https://github.com/anki-code/xontrib-spec-mod"
"Issue tracker" = "https://github.com/anki-code/xontrib-spec-mod/issues"

[project.optional-dependencies]
dict = ["demjson3"]
yaml = ["pyyaml"]
dev = ["pytest>=7.0"]

[build-system]
requires = [
    "setuptools>=62",
    "wheel",               # for bdist package distribution
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xontrib.spec_mod"]
package-dir = {xontrib = "xontrib"}
platforms = ["any"]
include-package-data = false

[tool.setuptools.package-data]
xontrib = ["*.py"]

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''

[tool.ruff]
select = [
    "E",
    "F",
    "B", # flake8-bugbear
    "I", # isort
    "UP", # pyupgrade
    "SIM", # simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff specific rules
]
